sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1: error: not enough arguments for method bubbleSort: (list: List[Char])List[Char].
Unspecified value parameter list.
		bubbleSort();
                          ^AlgBubbleSort1:3: error: type mismatch;
 found   : List[Char]
 required: Array[Char]
  var temp :Array[Char]=list
                        ^AlgBubbleSort1:15: error: type mismatch;
 found   : Array[Char]
 required: List[Char]
  return temp
         ^