sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(list:List[Char]):List[Char]= {
  var temp :Array[Char]=list
  var k: Int = 1
  while(k!=0){
    k=0
    for (i<-1 to (temp.length-1)){
      if (plusPetit(temp(i+1),temp(i))){
        echange(temp(i),temp(i+1))
        k = k+1
      }
      
    }
  }
  return temp
}